# laurel

./: README.md  pyproject.toml
laurel/: control.py  graph_utils.py  mdp.py
notebooks/: feature_graphs.ipynb  paper.ipynb  plots.ipynb  random_networks.ipynb  random_routing.ipynb  reinforcement_learning.ipynb  supervised_control.ipynb
run/: cluster.yaml  defaults.yaml  ppo-linear.yaml  test.yaml
run/experiments/: ppo-gnn.yaml  ppo-linear-fix.yaml  ppo-linear-fix2.yaml  ppo.yaml  test-fix.yaml
src/: fix_run.py  main.py
