[tool.poetry]
name = "laurel"
version = "0.1.0"
description = "Logistics Assignments Using Reinforcement Learning"
authors = ["Onno Eberhard <onnoeberhard@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
# oetils = "^0.1.1"
# tueplots = "^0.0.10"
numpy = "^1.26.0"
jax = "^0.4.16"
jraph = "0.0.6.dev0"
matplotlib = "^3.8.0"
networkx = "^3.1"
scipy = "^1.11.3"
flax = "^0.7.4"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
optax = "^0.1.7"
jax-dataloader = "^0.0.5"
orbax-checkpoint = "^0.4.0"
ipython = "^8.15.0"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
